# Suverenfiles

./: .gitignore  INSTALL_RU.md  README.md  pyproject.toml  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/suveren/files/: LocalFileProvider.java  MainActivity.java
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
docs/: architecture.md
greenwave/: cli.py  config.py  logging.py
greenwave/analyzer/: interfaces.py
greenwave/crawler/: crawler.py  link_extractor.py  page_actions.py
greenwave/database/: connection.py  repositories.py  schema.py
greenwave/discover/: browser.py  cdp.py  classifier.py  engine.py  exporter.py  traffic.py  verifier.py
greenwave/models/: stream.py  traffic.py
greenwave/recorder/: interfaces.py
greenwave/utils/: media.py
greenwave/web/: interfaces.py
tests/: test_cli.py
tests/database/: test_repository.py
tests/discover/: test_classifier.py  test_media.py
