[project]
name = "greenwave-recorder"
version = "0.1.0"
description = "Async platform for discovering, recording, and analyzing city camera streams."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GreenWave Contributors" }]
dependencies = [
  "aiohttp>=3.12.13,<4.0.0",
  "aiosqlite>=0.21.0,<1.0.0",
  "playwright>=1.53.0,<2.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "rich>=14.0.0,<15.0.0",
  "structlog>=25.4.0,<26.0.0",
  "typer>=0.16.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.1,<2.0.0",
  "pytest>=8.4.1,<9.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "ruff>=0.12.1,<1.0.0",
]

[project.scripts]
greenwave = "greenwave.cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["greenwave", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
